adds base PDF preview

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ ensure_vala_version("0.11.3" MINIMUM)
 include(ValaPrecompile)
 
 find_package(PkgConfig)
-pkg_check_modules(DEPS REQUIRED gtk+-3.0 gtksourceview-3.0 granite)
+pkg_check_modules(DEPS REQUIRED gtk+-3.0 gtksourceview-3.0 granite poppler-glib)
 
 set(CFLAGS ${DEPS_CFLAGS} ${DEPS_CFLAGS_OTHER})
 set(LIB_PATHS ${DEPS_LIBRARY_DIRS})
@@ -20,7 +20,7 @@ foreach(VALA_SRC_FILE_ABS ${VALA_SRC_ABS})
 endforeach(VALA_SRC_FILE_ABS)
 
 add_definitions(${CFLAGS} -Wno-deprecated-declarations)
-vala_precompile(VALA_C ${VALA_SRC} PACKAGES gtk+-3.0 gtksourceview-3.0 granite OPTIONS --thread)
+vala_precompile(VALA_C ${VALA_SRC} PACKAGES gtk+-3.0 gtksourceview-3.0 granite poppler-glib OPTIONS --thread --target-glib=2.32)
 
 add_executable(athena ${VALA_C})
 target_link_libraries(athena ${DEPS_LIBRARIES})
