adds rendering indicator & toolbar to PDF preview

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,5 +23,5 @@ add_definitions(${CFLAGS} -Wno-deprecated-declarations)
 vala_precompile(VALA_C ${VALA_SRC} PACKAGES gtk+-3.0 gtksourceview-3.0 granite poppler-glib OPTIONS --thread --target-glib=2.32)
 
 add_executable(athena ${VALA_C})
-target_link_libraries(athena ${DEPS_LIBRARIES})
+target_link_libraries(athena ${DEPS_LIBRARIES} m)
 
