moves Utils.RectD to src/Utils/RectD.vala

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CFLAGS ${DEPS_CFLAGS} ${DEPS_CFLAGS_OTHER})
 set(LIB_PATHS ${DEPS_LIBRARY_DIRS})
 link_directories(${LIB_PATHS})
 
-file(GLOB VALA_SRC_ABS *.vala)
+file(GLOB_RECURSE VALA_SRC_ABS *.vala)
 set(VALA_SRC "")
 foreach(VALA_SRC_FILE_ABS ${VALA_SRC_ABS})
     file(RELATIVE_PATH VALA_SRC_FILE "${CMAKE_CURRENT_LIST_DIR}" "${VALA_SRC_FILE_ABS}")
