--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ cmake_policy(VERSION 2.8)
 project(Athena)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
+
 add_subdirectory(src)
+add_subdirectory(schemas)
