adds Utils.get_version()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 2.8)
 cmake_policy(VERSION 2.8)
 
 project(Athena)
+set(MAJOR_VERSION "0")
+set(MINOR_VERSION "1")
+set(PATCH_VERSION "0")
+set(VERSION "${MAJOR_VERSION}.${MINOR_VERSION}")
 
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
     set(CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "default install path" FORCE)
