--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
 set(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
 set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${MAJOR_VERSION}.${MINOR_VERSION}-${CPACK_PACKAGE_VERSION_PATCH}")
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "libgtksourceview-3.0-1 (>= 3.14.4), libxml2 (>= 2.9.1), libgranite3 (>= 0.3.1), libgtk-3-0 (>= 3.14), libglib2.0-0 (>= 2.32), libpoppler-glib8 (>= 0.24)")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libgtksourceview-3.0-1 (>= 3.14.4), libxml2 (>= 2.9.1), libgranite3 (>= 0.3.1), libgtk-3-0 (>= 3.14), libglib2.0-0 (>= 2.32), libpoppler-glib8 (>= 0.24), libsoup-2.4 (>= 2.44.2)")
 set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
 set(CPACK_DEBIAN_PACKAGE_SECTION "editors")
 set(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
